tests/should_fail/recursive_types/assoc_type_bounds.stderr
error: called program function `Tr::f` in logic context
  --> assoc_type_bounds.rs:12:14
   |
12 |         self.f().g()
   |              ^

error: Illegal recursive trait
 --> assoc_type_bounds.rs:4:1
  |
4 | pub trait Tr {
  | ^^^^^^^^^^^^
  |
note: `Tr` is a bound of `Tr::A`
 --> assoc_type_bounds.rs:5:13
  |
5 |     type A: Tr;
  |             ^^

error: Recursive logic function without a `#[variant]` clause or a structurally decreasing argument
  --> assoc_type_bounds.rs:11:5
   |
11 |     fn g(self) {
   |     ^^^^^^^^^^
   |
note: Recursive call happens here
  --> assoc_type_bounds.rs:12:9
   |
12 |         self.f().g()
   |         ^^^^^^^^^^^^

error: aborting due to 3 previous errors

